fixed issue with image being too large

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -9,4 +9,7 @@
   display: block;
   margin: 0 auto;
   border-radius:10px;
+  max-width: 100%; /*Keeps the image under control*/
+  width: 80%;
+  height: auto;
 }
